--- a/index.html
+++ b/index.html
@@ -2,46 +2,46 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Đăng nhập với Google - FirebaseUI</title>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <script src="https://cdn.firebase.com/libs/firebaseui/6.0.2/firebaseui.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/6.0.2/firebaseui.css" />
+  <title>Google Login Demo</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
-  <h3>Đăng nhập Google</h3>
-  <div id="firebaseui-auth-container"></div>
-  <script>
-    // Copy config này từ Firebase Console > Project settings > Web app
-    const firebaseConfig = {
-      apiKey: "AIzaSyAa6COav3Ie73R2w9hpXrsykxF9Cw79I-k",
-      authDomain: "dienmayapp.firebaseapp.com",
-      databaseURL: "https://dienmayapp-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "dienmayapp",
-      storageBucket: "dienmayapp.appspot.com",
-      messagingSenderId: "162319868578",
-      appId: "1:162319868578:web:0ac90b15965d81e9702dfb"
-    };
-    firebase.initializeApp(firebaseConfig);
+  <h2>Đăng nhập bằng Google</h2>
+  <div id="g_id_onload"
+    data-client_id="548270581254-rffg7r3icluq7akpfj14474516b7qq8k.apps.googleusercontent.com"
+    data-context="signin"
+    data-ux_mode="popup"
+    data-callback="handleCredentialResponse"
+    data-auto_prompt="false">
+  </div>
 
-    // Cấu hình FirebaseUI
-    const uiConfig = {
-      signInSuccessUrl: '/', // Hoặc custom, hoặc để '/'
-      signInOptions: [
-        firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-      ],
-      callbacks: {
-        signInSuccessWithAuthResult: function(authResult, redirectUrl) {
-          // Đăng nhập thành công, gửi thông tin user qua postMessage cho app React Native
-          if (window.ReactNativeWebView) {
-            window.ReactNativeWebView.postMessage(JSON.stringify(authResult.user));
-          }
-          return false; // Không redirect
-        }
-      }
-    };
-    const ui = new firebaseui.auth.AuthUI(firebase.auth());
-    ui.start('#firebaseui-auth-container', uiConfig);
+  <div class="g_id_signin"
+    data-type="standard"
+    data-shape="rectangular"
+    data-theme="outline"
+    data-text="signin_with"
+    data-size="large"
+    data-logo_alignment="left">
+  </div>
+
+  <pre id="result"></pre>
+
+  <script>
+    function handleCredentialResponse(response) {
+      // response.credential là JWT chứa thông tin user
+      const result = document.getElementById('result');
+      result.textContent = JSON.stringify(parseJwt(response.credential), null, 2);
+      // Bạn có thể gửi token này về backend xác thực, hoặc lưu vào app...
+    }
+    // Giải mã JWT để lấy thông tin user
+    function parseJwt(token) {
+      var base64Url = token.split('.')[1];
+      var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+      var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function(c) {
+          return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+      return JSON.parse(jsonPayload);
+    }
   </script>
 </body>
 </html>
